@@ -1,3 +1,8 @@
+Wed,  6 Dec 2006 19:56:33 +0100 <thp@perli.net>
+        * src/gpodder/gpodder.py: Add columns, resizable and reorderable
+          columns to the downloaded podcasts tab (nearly the same as in 
+          the available podcasts tab)
+
 Wed,  6 Dec 2006 19:43:11 +0100 <thp@perli.net>
         * src/gpodder/libwget.py: Don't log wget's output for now (too 
           noisy for testing, also wget seems to be stable for gPodder);
